--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--
+              \     /
+          \    o ^ o    /
+            \ (     ) /
+ ____________(%%%%%%%)____________
+(     /   /  )%%%%%%%(  \   \     )
+(___/___/__/           \__\___\___)
+   (     /  /(%%%%%%%)\  \     )
+    (__/___/ (%%%%%%%) \___\__)
+            /(       )\
+          /   (%%%%%)   \
+               (%%%)
+                 !
+
+	look at you, being nosy.
+	View the source here: https://github.com/minamarkham/beyonceipsum
+-->
 
 <head>
-	<meta charset="utf-8" />
-	<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="theme-color" content="#000000" />
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="author" content="Mina Markham">
+	<meta name="title" content="Beyoncé Ipsum">
 	<meta name="description" content="A lorem ipsum generator fit for a Queen" />
+	<meta name="theme-color" content="#000000" />
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@minamarkham">
+	<meta name="twitter:creator" content="@minamarkham">
+	<meta name="twitter:url" content="%PUBLIC_URL%">
+	<meta name="twitter:title" content="Beyoncé Ipsum">
+	<meta name="twitter:description" content="A lorem ipsum generator fit for a Queen">
+	<meta name="twitter:image" content="%PUBLIC_URL%/social-share.jpg">
+	<meta name="twitter:image:alt" content="A lorem ipsum generator fit for a Queen">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="%PUBLIC_URL%/">
+	<meta property="og:locale" content="en_us">
+	<meta property="og:title" content="Beyoncé Ipsum">
+	<meta property="og:description" content="A lorem ipsum generator fit for a Queen">
+	<meta property="og:image" content="%PUBLIC_URL%/social-share.jpg">
+	<meta property="og:image:alt" content="A lorem ipsum generator fit for a Queen">
+	<title>Beyoncé Ipsum</title>
+	<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 	<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,7 +50,6 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=DM+Mono&family=DM+Sans:opsz,wght@9..40,700;9..40,800;9..40,900;9..40,1000&display=swap"
 		rel="stylesheet">
-	<title>Beyoncé Ipsum</title>
 </head>
 
 <body>
